--- a/CheatMenu.csproj
+++ b/CheatMenu.csproj
@@ -67,6 +67,10 @@
       <HintPath>..\..\..\Steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule">
+      <HintPath>..\..\..\Steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\Steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
