--- a/CheatMenu.csproj
+++ b/CheatMenu.csproj
@@ -63,6 +63,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>..\..\steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\Steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
@@ -83,10 +87,19 @@
       <HintPath>..\..\..\Steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\..\steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UIModule">
+      <HintPath>..\..\steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\UnityEngine.UIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CheatMenuScript.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UGUICheatMenu.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
