--- a/CheatMenu.csproj
+++ b/CheatMenu.csproj
@@ -36,7 +36,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\Steam\steamapps\common\TWOKF\TheWorldOfKongFu_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Core">
